# Beart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  REFERENCES.md  main.cpp  references.md
.github/workflows/: cmake-single-platform.yml
scene/: sample.json
scene/darts22/hw1/: 01_plane.json  02_balls.json  03_refl.json  04_refr.json  05_quad_light.json  06_jenson_box.json
scene/darts22/hw2/: ajax-white.json  buddha-box.json  bunny_dragons.json  loewenfeld-in-box.json
scene/darts22/hw4/: odyssey_mats.json  vech_mats.json
scene/ecse689/hw1/: sphere_directional.json  sphere_point.json
scene/ecse689/hw2/: sphere_ao.json  sphere_solid.json
scene/ecse689/hw3/: bunny_phong.json  vech_mis.json
scene/ecse689/hw4/: cornellbox_rect.json  cornellbox_sphere.json
src/core/: Beart.cpp  CMakeLists.txt  Scene.h  beart.cpp  common.h  main.cpp  scene.cpp  scene.h
src/core/accel/: Accelerator.cpp  Accelerator.h  BVH.cpp  BVH.h  accelerator.h  bvh.cpp  bvh.h  bvh_common.h  bvh_util.h
src/core/accelerator/: accelerator.h  bvh.cpp  bvh.h  bvh_common.h
src/core/camera/: Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  camera.h  perspective_camera.cpp  perspective_camera.h
src/core/film/: Film.cpp  Film.h  film.cpp  film.h
src/core/integrator/: ao.cpp  ao.h  bid_tracing.cpp  bid_tracing.h  direct.cpp  direct.h  integrator.cpp  integrator.h  integrator_common.h  light_tracing.cpp  light_tracing.h  normal.cpp  normal.h  path_tracing.cpp  path_tracing.h
src/core/integrator/bidpath/: path_vertex.h
src/core/integrators/: Integrator.cpp  Integrator.h  integrator.cpp  integrator.h
src/core/io/: JsonSerializable.cpp  JsonSerializable.h  factory.h  json_serializable.h  scene_parser.cpp  scene_parser.h
src/core/light/: Light.cpp  Light.h  area_light.cpp  area_light.h  constant_light.cpp  constant_light.h  directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h
src/core/material/: bxdf.cpp  bxdf.h  bxdf_common.h  conductor.cpp  conductor.h  conductor_data.h  dielectric.cpp  dielectric.h  diffuse.cpp  diffuse.h  event.cpp  event.h  fresnel.h  ior_data.h  material.cpp  material.h  microfacet.cpp  microfacet.h  orennayar.cpp  orennayar.h  phong.cpp  phong.h  rough_conductor.cpp  rough_conductor.h  rough_dielectric.cpp  rough_dielectric.h
src/core/math/: AABB.cpp  AABB.h  Mat.h  Quadratic.h  Ray.h  Transform.h  Vec.h  aabb.cpp  aabb.h  bbox.h  interection.cpp  interection.h  mat.h  matrix.h  quadratic.h  ray.h  transform.h  vec.h
src/core/primitive/: intersection_info.cpp  intersection_info.h  primitive.h  shape.h  sphere.cpp  sphere.h
src/core/primitives/: IntersectionInfo.cpp  IntersectionInfo.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h  intersectionInfo.cpp  intersectionInfo.h  primitive.h  sphere.cpp  sphere.h
src/core/sampler/: Samples.h  random_sampler.h  sample_common.h  sampler.cpp  sampler.h  samples.h
src/core/shape/: primitive.h  quad.cpp  quad.h  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  triangle_mesh.cpp  triangle_mesh.h
src/core/spectrum/: Spectrum.cpp  Spectrum.h  spectrum.cpp  spectrum.h
test/: CMakeLists.txt  camera_test.cpp
